--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
+		  <dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.5</version>
+		  </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -47,6 +54,8 @@
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
 
+
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -85,6 +94,11 @@
 		    <version>2.6.0</version>
 		  </dependency>
 		
+			<dependency>
+			    <groupId>com.mercadopago</groupId>
+			    <artifactId>sdk-java</artifactId>
+			    <version>2.1.29</version> <!-- o la última estable que quieras -->
+			</dependency>
 		
 		
 		<!-- Validación de DTOs -->
