--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=products
 
-spring.datasource.url=jdbc:mysql://localhost:3306/products_nahuel?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:IfoNjlHCMCGbLunyoVaaDTEMPzSDugfq@mainline.proxy.rlwy.net:55927/railway
 spring.datasource.username=root
-spring.datasource.password=ProgramaRAEE2025!!
+spring.datasource.password=IfoNjlHCMCGbLunyoVaaDTEMPzSDugfq
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # (Opcional; Boot suele autodetectar el dialecto)
