--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,20 @@
-FROM eclipse-temurin:17-jre
+FROM maven:3.9.9-eclipse-temurin-17 AS build
+WORKDIR /app
 
-COPY proyecto_products-0.0.1-SNAPSHOT.jar app.jar
+
+COPY pom.xml .
+COPY src ./src
+
+
+RUN mvn -B -DskipTests clean package
+
+
+FROM eclipse-temurin:17-jre
+WORKDIR /app
+
+
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
